docs: add auth routes
